--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body,
     font-family: sans-serif;
     width: 100%;
     height: 100vh;
-    overflowx: hidden;
+    overflow-x: hidden;
 }
 
 .wrapper {
@@ -60,16 +60,16 @@ body,
     color: transparent;
 }
 
-#left-arrow {
+#arrow-left {
     border-width: 30px 40px 30px 0;
-    border-color: transparent #fff transparent transparent;
+    border-color: transparent purple transparent transparent;
     left: 0;
     margin-left: 30px;
 }
 
-#right-arrow {
+#arrow-right {
     border-width: 30px 0px 30px 40px;
-    border-color: transparent transparent transparent #fff;
+    border-color: transparent transparent transparent purple;
     right: 0;
     margin-right: 30px;
 }
